# Paper-Agents

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  FEATURE_PLAN.md  PRODUCTION_READINESS.md  PROJECT_OVERVIEW.md  QA_REPORT.md  README.md  TECH_STACK.md  TRANSFORMATION_COMPLETE.md  UX_REVIEW.md  app.py  competitive_analysis.md  docker-compose.demo.yml  docker-compose.yml  middleware.js  pyproject.toml  requirements.txt  schema.sql  setup_cron.sh  ui_prototype.html  vercel.json
config/: settings.yaml
demo/: README.md
docs/: ARCHITECTURE.md  COMPANION.md  HotPaper_Service_Description.md  TALK_OUTLINE.md  learning-roadmap-guidebook.md  roadmap-redesign-proposal.md  trend_analysis_setup.md  vllm-setup.md
frontend/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  server.js  tailwind.config.js  test.html  vercel.json  vite.config.js
functions/: sitemap.xml.js
init-db/: 01-schema.sql
mcp_server/: README.md  hotpaper_mcp.py  pyproject.toml
scripts/: add_2024_important_papers.py  add_2025_2026_papers.py  build_embeddings.py  build_keyword_stats.py  collect_comprehensive_papers.py  collect_important_papers.py  collect_more_papers.py  collect_test_papers.py  create_perfect_roadmaps.py  daily_update_system.py  fix_real_fundamentals.py  generate_daily_digest.py  generate_missing_embeddings.py  init_db.py  merge_databases.py  recommend.py  restructure_roadmaps.py  run_daily_ingest.py  run_daily_pipeline.py  run_deep_pdf_summary.py  run_hot_topics.py  run_light_summary.py  select_deep_pdf_candidates.py  setup_production.py  (+4 more)
(+165 files in other folders)
